# gxm.old

./: .clang-format  .gitmodules  CMakeLists.txt  README.md
examples/: CMakeLists.txt  empty_window.cpp  framebuffer.cpp  gaussian_filter.cpp  srgb.cpp  srgb.frag  srgb.vert  texture.cpp  texture.frag  texture.vert  triangle.cpp
libs/glsl-optimizer/: CMakeLists.txt
libs/stb/: stb_image.h
res/glsl/: default.frag  default.vert  framebuffer.frag  framebuffer.vert  gaussian_filter.frag
src/: log.h  main.cpp
src/gxm/: CMakeLists.txt  app.cpp  app.h  common.h  exception.h  geometry.cpp  geometry.h  gl_blend.h  gl_buffer.cpp  gl_buffer.h  gl_context.cpp  gl_context.h  gl_draw_command.cpp  gl_draw_command.h  gl_draw_polygon.cpp  gl_draw_polygon.h  gl_framebuffer.cpp  gl_framebuffer.h  gl_program.cpp  gl_program.h  gl_renderbuffer.cpp  gl_texture.cpp  gl_texture.h  gl_vertex.cpp  gl_vertex.h  gl_vertex_array.cpp  gl_vertex_array.h  glsl.cpp  glsl.h  gxm.cpp  gxm.h  log.cpp  log.h  texture.h
src/gxm.bak/: app.cpp  common.h  exception.cpp  geometry.h  gl_blend.cpp  gl_blend.h  gl_bridge.h  gl_context.h  gl_draw_polygon.cpp  gl_framebuffer.h  gl_program.cpp  gl_renderbuffer.h  gl_texture.cpp  gl_texture.h  glsl.cpp  main.cpp
src/gxm/core/: CMakeLists.txt  component.h  object.h  scene.h
src/gxm/main/: CMakeLists.txt  app.cpp  app.h  input.cpp  input.h
src/gxm/render/: CMakeLists.txt  render.cpp  render.h  vbo.h  window.cpp  window.h
src/gxm/render/gl4/: CMakeLists.txt  render.cpp  render.h  window.cpp  window.h
src/gxm/script/: CMakeLists.txt  lua_engine.cpp  lua_engine.h
tools/: generate_glsl.py
